# likenovel-service-api

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md
fastapi_be_server/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  migration.py  nginx.conf  pyproject.toml  sync.cron
fastapi_be_server/app/: const.py  exceptions.py  main.py  rdb.py  tags.py
fastapi_be_server/docs/: cp-link-source-of-truth-phase1.md  partner-cp-contract-phase1.md  story-agent-game-modes-design.md
fastapi_be_server/scripts/: backfill_ai_dna_from_json.py  backfill_episode_content_from_epub.py  build_bulk_upload_bundle_from_product.py  build_story_agent_context.py  build_story_agent_summary_shadow.py  compare_story_agent_summary_models.py  compare_story_agent_summary_shadow.py  debug_banner_listing.py  eval_extract_run.py  eval_golden_set.py  extract_product_dna.py  prepare_ai_reader_prod.py  restore_normalized_episodes.py  run_ai_provider_health_check.py  run_ai_reader_worker.py
fastapi_be_server/tests/: conftest.py  test_admin_ai_metadata_prompt.py  test_admin_banner_order_service.py  test_admin_blind_service.py  test_admin_bulk_upload_service.py  test_admin_episode_management_service.py  test_admin_paid_conversion_apply.py  test_ai_chat_guest_access.py  test_ai_chat_service.py  test_ai_product_briefs.py  test_ai_provider_health_service.py  test_ai_reader_agent_phase1.py  test_ai_reader_worker_deploy.py  test_author_product_entry_daily_batch_sql.py  test_author_product_inflow_dropoff_statistics_service.py  test_auto_migrate.py  (+34 more)
(+223 files in other folders)
